feat: allow manual addition/removal of movies to watchlist
